tests/rosetta/out/Rust/24-game-solve.error
rustc: exit status 1
error[E0599]: `HashMap<String, i32>` doesn't implement `std::fmt::Display`
  --> /tmp/24_game_solve.rs:14:292
   |
14 | ...ng::from("denom"), 1); m }.to_string()); m };
   |                               ^^^^^^^^^ `HashMap<String, i32>` cannot be formatted with the default formatter
   |
   = note: the following trait bounds were not satisfied:
           `HashMap<String, i32>: std::fmt::Display`
           which is required by `HashMap<String, i32>: ToString`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error[E0308]: mismatched types
  --> /tmp/24_game_solve.rs:14:306
   |
13 | ...-> std::collections::HashMap<String, i32> {
   |       -------------------------------------- expected `HashMap<String, i32>` because of return type
14 | ...d::collections::HashMap::new(); m.insert(String::from("op").to_string(), OP_NUM.to_string()); m.insert(String::from("value").to_string(), { let mut m = std::collections::HashMap::new(); m.insert(String::from("num"), n); m.insert(String::from("denom"), 1); m }.to_string()); m };
   |                                    -                                        ------------------ this argument has type `String`...                                                                                                                                                    ^ expected `HashMap<String, i32>`, found `HashMap<String, String>`
   |                                    |
   |                                    ... which causes `m` to have type `HashMap<String, String>`
   |
   = note: expected struct `HashMap<_, i32>`
              found struct `HashMap<_, String>`
help: try removing the method call
   |
14 -         return { let mut m = std::collections::HashMap::new(); m.insert(String::from("op").to_string(), OP_NUM.to_string()); m.insert(String::from("value").to_string(), { let mut m = std::collections::HashMap::new(); m.insert(String::from("num"), n); m.insert(String::from("denom"), 1); m }.to_string()); m };
14 +         return { let mut m = std::collections::HashMap::new(); m.insert(String::from("op").to_string(), OP_NUM); m.insert(String::from("value").to_string(), { let mut m = std::collections::HashMap::new(); m.insert(String::from("num"), n); m.insert(String::from("denom"), 1); m }.to_string()); m };
   |

error[E0308]: mismatched types
  --> /tmp/24_game_solve.rs:18:20
   |
16 |     let exprEval = move |x: &std::collections::HashMap<String, i32>| -> std::collections::HashMap<String, i32> {
   |                                                                         -------------------------------------- expected `HashMap<String, i32>` because of return type
17 |         if *x.get(&String::from("op")).unwrap() == OP_NUM {
18 |             return *x.get(&String::from("value")).unwrap();
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `HashMap<String, i32>`, found `i32`
   |
   = note: expected struct `HashMap<String, i32>`
                found type `i32`

error[E0425]: cannot find function `exprEval` in this scope
  --> /tmp/24_game_solve.rs:20:17
   |
20 |         let l = exprEval(&*x.get(&String::from("left")).unwrap());
   |                 ^^^^^^^^ not found in this scope

error[E0425]: cannot find function `exprEval` in this scope
  --> /tmp/24_game_solve.rs:21:17
   |
21 |         let r = exprEval(&*x.get(&String::from("right")).unwrap());
   |                 ^^^^^^^^ not found in this scope

error[E0599]: no method named `get` found for reference `&i32` in the current scope
  --> /tmp/24_game_solve.rs:35:60
   |
35 |             return *x.get(&String::from("value")).unwrap().get(&String::from("num")).unwrap().to_string();
   |                     -                                      ^^^
   |                     |
   |                     method `get` is available on `&HashMap<String, i32>`
   |
help: there is a method `ge` with a similar name
   |
35 -             return *x.get(&String::from("value")).unwrap().get(&String::from("num")).unwrap().to_string();
35 +             return *x.get(&String::from("value")).unwrap().ge(&String::from("num")).unwrap().to_string();
   |

error[E0425]: cannot find function `exprString` in this scope
  --> /tmp/24_game_solve.rs:37:18
   |
37 |         let ls = exprString(&*x.get(&String::from("left")).unwrap());
   |                  ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `exprString` in this scope
  --> /tmp/24_game_solve.rs:38:18
   |
38 |         let rs = exprString(&*x.get(&String::from("right")).unwrap());
   |                  ^^^^^^^^^^ not found in this scope

error[E0599]: `HashMap<String, i32>` doesn't implement `std::fmt::Display`
  --> /tmp/24_game_solve.rs:72:187
   |
72 | ...rom("left").to_string(), a.to_string()); m.insert(String::from("right").to_string(), b.to_string()); m };
   |                               ^^^^^^^^^ `HashMap<String, i32>` cannot be formatted with the default formatter
   |
   = note: the following trait bounds were not satisfied:
           `HashMap<String, i32>: std::fmt::Display`
           which is required by `HashMap<String, i32>: ToString`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error[E0599]: `HashMap<String, i32>` doesn't implement `std::fmt::Display`
  --> /tmp/24_game_solve.rs:72:247
   |
72 | ...om("right").to_string(), b.to_string()); m };
   |                               ^^^^^^^^^ `HashMap<String, i32>` cannot be formatted with the default formatter
   |
   = note: the following trait bounds were not satisfied:
           `HashMap<String, i32>: std::fmt::Display`
           which is required by `HashMap<String, i32>: ToString`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error[E0308]: mismatched types
  --> /tmp/24_game_solve.rs:73:69
   |
73 |                     if solve({ let mut tmp = rest.clone(); tmp.push(node); tmp }) {
   |                                                                ---- ^^^^ expected `HashMap<String, i32>`, found `HashMap<String, String>`
   |                                                                |
   |                                                                arguments to this method are incorrect
   |
   = note: expected struct `HashMap<_, i32>`
              found struct `HashMap<_, String>`
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/alloc/src/vec/mod.rs:2442:12

error[E0425]: cannot find function `solve` in this scope
  --> /tmp/24_game_solve.rs:73:24
   |
73 |                     if solve({ let mut tmp = rest.clone(); tmp.push(node); tmp }) {
   |                        ^^^^^ not found in this scope

error[E0599]: `HashMap<String, i32>` doesn't implement `std::fmt::Display`
  --> /tmp/24_game_solve.rs:77:187
   |
77 | ...rom("left").to_string(), b.to_string()); m.insert(String::from("right").to_string(), a.to_string()); m };
   |                               ^^^^^^^^^ `HashMap<String, i32>` cannot be formatted with the default formatter
   |
   = note: the following trait bounds were not satisfied:
           `HashMap<String, i32>: std::fmt::Display`
           which is required by `HashMap<String, i32>: ToString`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error[E0599]: `HashMap<String, i32>` doesn't implement `std::fmt::Display`
  --> /tmp/24_game_solve.rs:77:247
   |
77 | ...om("right").to_string(), a.to_string()); m };
   |                               ^^^^^^^^^ `HashMap<String, i32>` cannot be formatted with the default formatter
   |
   = note: the following trait bounds were not satisfied:
           `HashMap<String, i32>: std::fmt::Display`
           which is required by `HashMap<String, i32>: ToString`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error[E0308]: mismatched types
  --> /tmp/24_game_solve.rs:78:65
   |
78 |                 if solve({ let mut tmp = rest.clone(); tmp.push(node); tmp }) {
   |                                                            ---- ^^^^ expected `HashMap<String, i32>`, found `HashMap<String, String>`
   |                                                            |
   |                                                            arguments to this method are incorrect
   |
   = note: expected struct `HashMap<_, i32>`
              found struct `HashMap<_, String>`
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/alloc/src/vec/mod.rs:2442:12

error[E0425]: cannot find function `solve` in this scope
  --> /tmp/24_game_solve.rs:78:20
   |
78 |                 if solve({ let mut tmp = rest.clone(); tmp.push(node); tmp }) {
   |                    ^^^^^ not found in this scope

error[E0599]: `HashMap<String, i32>` doesn't implement `std::fmt::Display`
  --> /tmp/24_game_solve.rs:81:179
   |
81 | ...rom("left").to_string(), b.to_string()); m.insert(String::from("right").to_string(), a.to_string()); m };
   |                               ^^^^^^^^^ `HashMap<String, i32>` cannot be formatted with the default formatter
   |
   = note: the following trait bounds were not satisfied:
           `HashMap<String, i32>: std::fmt::Display`
           which is required by `HashMap<String, i32>: ToString`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error[E0599]: `HashMap<String, i32>` doesn't implement `std::fmt::Display`
  --> /tmp/24_game_solve.rs:81:239
   |
81 | ...om("right").to_string(), a.to_string()); m };
   |                               ^^^^^^^^^ `HashMap<String, i32>` cannot be formatted with the default formatter
   |
   = note: the following trait bounds were not satisfied:
           `HashMap<String, i32>: std::fmt::Display`
           which is required by `HashMap<String, i32>: ToString`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error[E0308]: mismatched types
  --> /tmp/24_game_solve.rs:82:65
   |
82 |                 if solve({ let mut tmp = rest.clone(); tmp.push(node); tmp }) {
   |                                                            ---- ^^^^ expected `HashMap<String, i32>`, found `HashMap<String, String>`
   |                                                            |
   |                                                            arguments to this method are incorrect
   |
   = note: expected struct `HashMap<_, i32>`
              found struct `HashMap<_, String>`
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/alloc/src/vec/mod.rs:2442:12

error[E0425]: cannot find function `solve` in this scope
  --> /tmp/24_game_solve.rs:82:20
   |
82 |                 if solve({ let mut tmp = rest.clone(); tmp.push(node); tmp }) {
   |                    ^^^^^ not found in this scope

error[E0308]: mismatched types
  --> /tmp/24_game_solve.rs:98:72
   |
98 |                 cards = { let mut tmp = cards.clone(); tmp.push(newNum(n)); tmp };
   |                                                                 ------ ^ expected `i32`, found `i64`
   |                                                                 |
   |                                                                 arguments to this function are incorrect
   |
note: closure parameter defined here
  --> /tmp/24_game_solve.rs:13:24
   |
13 |     let newNum = move |n: i32| -> std::collections::HashMap<String, i32> {
   |                        ^^^^^^
help: you can convert an `i64` to an `i32` and panic if the converted value doesn't fit
   |
98 |                 cards = { let mut tmp = cards.clone(); tmp.push(newNum(n.try_into().unwrap())); tmp };
   |                                                                         ++++++++++++++++++++

error: aborting due to 21 previous errors

Some errors have detailed explanations: E0308, E0425, E0599.
For more information about an error, try `rustc --explain E0308`.
